# safe-mcp-agent

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  PROJECT_STATE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agenteval/: README.md  pyproject.toml
agenteval/agenteval/: __init__.py  plugin.py  storage.py
agenteval/agenteval/metrics/: security.py  task_success.py
agenteval/agenteval/telemetry/: trace_processor.py
attacks/: safe_t1201_prompt_injection.py  safe_t1203_tool_hijack.py  safe_t1208_exfiltration.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  PROJECT.md  ROADMAP.md  THREAT_MODEL.md
reference_system/: __init__.py  agent.py  mcp_server.py  middleware.py
reference_system/fixtures/wiki/: billing.txt  data_handling.txt  support_escalation.txt
scripts/: seed_fixtures.py
tests/: conftest.py  test_agent_behavior.py  test_security.py
