[tool.poetry]
name = "mcp-guardeval"
version = "0.1.0"
description = "Automated evaluation harness for MCP-based agents: task success scoring, security attack suite, and OpenTelemetry trace analysis."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "agenteval" },
]
keywords = ["mcp", "langgraph", "agent-evaluation", "llm-security", "opentelemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
opentelemetry-sdk = "^1.25"
opentelemetry-api = "^1.25"
pytest = "^8.2"          # runtime dep — plugin hooks require pytest to be importable

[tool.poetry.plugins."pytest11"]
agenteval = "agenteval.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
